# new-england-listings

./: README.md  activate.fish  debug_imports.py  dev-setup.sh  main.py  new-england-listings_template.csv  notion-database-example-setup.csv  notion_integration.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  scraper.py  setup.py  zillow_debug.html  zillow_text.txt
examples/: example_usage.py
src/new_england_listings/: __init__.py  cli.py  main.py
src/new_england_listings/api/: app.py
src/new_england_listings/config/: __init__.py  constants.py  settings.py  validation.py
src/new_england_listings/extractors/: __init__.py  base.py  farmland.py  farmlink.py  landandfarm.py  landsearch.py  landwatch.py  realtor.py  test_live_url.py  utils.py  zillow.py
src/new_england_listings/models/: base.py
src/new_england_listings/utils/: __init__.py  browser.py  browser.py.OLD  browser_auth.py  caching_utils.py  dates.py  geocoding.py  location_processing.py  location_service.py  logging_config.py  property_records.py  (+1 more)
test_results/: coverage_report.txt  test_extractors.py  test_output.txt
tests/: conftest.py  run_tests.sh  test_main.py
tests/test_api/: test_endpoints.py
tests/test_cli/: test_cli_commands.py
tests/test_extractors/: test_base.py  test_base_extractor.py  test_farmland.py  test_farmland_extractor.py  test_farmlink.py  test_landandfarm.py  test_landsearch.py  test_landsearch_extractor.py  test_realtor.py  test_realtor_extractor.py  test_zillow.py  test_zillow_extractor.py
tests/test_integration/: test_end_to_end.py  test_integration_mocks.py  test_notion.py  test_scraper.py
tests/test_performance/: test_benchmarks.py
tests/test_property_based/: test_text_processing.py
tests/test_regression/: test_known_bugs.py
tests/test_utils/: test_browser.py  test_date_extractor.py  test_dates.py  test_location_service.py  test_rate_limiter.py  test_rate_limiting.py  test_text.py  test_text_processor.py
(+5 files in other folders)
